--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <p><a href="https://s.vercel.app/api?url=https://google.com&amp;width=1280&amp;height=720">https://s.vercel.app/api?url=https://google.com&amp;width=1280&amp;height=720</a></p>
     <br>
     <p><b>Deploy your own screenshot API for free:</b></p>
-    <p><a href="https://vercel.com/new/git/external?repository-url=https%3A%2F%2Fgithub.com%2FRemiixInc%2Fscreenshot"><img src="https://vercel.com/button" alt="Deploy with Vercel"></a></p>
+    <p><a href="https://vercel.com/new/git/external?repository-url=https%3A%2F%2Fgithub.com%2Fchankitsaini%2Fscreenshot"><img src="https://vercel.com/button" alt="Deploy with Vercel"></a></p>
     <hr>
-    <footer>A project by <a href="https://kizzles.dev">Kieran</a>. View the source on <a href="https://github.com/RemiixInc/screenshot">GitHub</a>.</p>
+    <footer>A project by <a href="https://kizzles.dev">Kieran</a>. View the source on <a href="https://github.com/chankitsaini/screenshot">GitHub</a>.</p>
   </body>
 </html>
